...
                    navigationIcon = {
                        IconButton(
                            modifier = Modifier.testTag("detail:back"),
                            onClick = { onBackClick() },
                        ) {
...
                    actions = {
                        IconButton(
                            modifier = Modifier.testTag("detail:pin"),
                            onClick = { pinNote() },
                        ) {
...
                        }
                        IconButton(
                            modifier = Modifier.testTag("detail:notification"),

                            onClick = { onNotification() },
...
                        }
                        IconButton(
                            modifier = Modifier.testTag("detail:archive"),

                            onClick = { onArchive() },
...
                                Row(
                                    modifier = Modifier
                                        .testTag("detail:images")
                                        .fillMaxWidth()
                                        .height(200.dp),
...
                                                        .height(200.dp),
                                                    model = it.path,
                                                    contentDescription = "note image",
                                                    contentScale = ContentScale.Crop,
                                                )
...
                                    .padding(0.dp)
                                    .weight(1f)
                                    .testTag("detail:title"),

                            )
...
                                    .imePadding()
                                    .focusRequester(subjectFocus)
                                    .testTag("detail:content"),

                            )
...
                        item {
                            TextButton(
                                modifier = Modifier.testTag("detail:add_check_item_button"),
                                onClick = addItem,
                            ) {
...
                Row(Modifier.fillMaxWidth(), verticalAlignment = Alignment.CenterVertically) {
                    IconButton(
                        modifier = Modifier.testTag("detail:more"),
                        onClick = { moreOptions() },
                    ) {
...
                    }
                    IconButton(
                        modifier = Modifier.testTag("detail:colors"),
                        onClick = { onColorClick() },
                    ) {
...
                    }
                    IconButton(
                        modifier = Modifier.testTag("detail:options"),
                        onClick = { noteOption() },
                    ) {
...
                if (isPlay) {
                    IconButton(
                        modifier = Modifier.testTag("detail:voice:pause"),
                        onClick = pauseVoice,
                    ) {
...
                } else {
                    IconButton(
                        modifier = Modifier.testTag("detail:voice:play"),
                        onClick = playVoice,
                    ) {
...
            Text(text = noteVoiceUiState.length.toTime())
            IconButton(
                modifier = Modifier.testTag("detail:voice:delete"),
                onClick = { delete() },
            ) {
...
