...

-->
<resources>
    <string name="modules_designsystem_note">Note</string>
    <string name="modules_designsystem_title">Title</string>
    <string name="modules_designsystem_hide_checkboxes">Hide checkboxes</string>
    <string name="modules_designsystem_delete_checked_items">Delete checked items</string>
    <string name="modules_designsystem_uncheck_all_items">UnCheck all items</string>
    <string name="modules_designsystem_subject">Start writing...</string>
    <string name="modules_designsystem_add_list_item">Add list item</string>
    <string name="modules_designsystem_checked_items">Checked Items</string>
    <string name="modules_designsystem_edited">Edited</string>
    <string name="modules_designsystem_take_photo">Take photo</string>
    <string name="modules_designsystem_add_image">Add image</string>
    <string name="modules_designsystem_drawing">Drawing</string>
    <string name="modules_designsystem_recording">Recording</string>
    <string name="modules_designsystem_checkboxes">Checkboxes</string>
    <string name="modules_designsystem_color">Color</string>
    <string name="modules_designsystem_background">Background</string>
    <string name="modules_designsystem_delete">Delete</string>
    <string name="modules_designsystem_make_a_copy">Make a copy</string>
    <string name="modules_designsystem_send">Send</string>
    <string name="modules_designsystem_labels">Labels</string>
    <string name="modules_designsystem_grab_image_text">Grab image text</string>
    <string name="modules_designsystem_copy">Copy</string>
    <string name="modules_designsystem_edit_label">Edit label</string>
...
